<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wolfgang.firebasepractice.WaridActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/warid1"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warid"
            android:textSize="25dip"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            android:layout_above="@id/rel1"
            android:layout_marginBottom="60dip"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rel1"
            android:layout_centerInParent="true"
            >


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main2btn1"
                android:id="@+id/telBtn1"
                android:layout_marginTop="10dip"

                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main2btn2"
                android:id="@+id/telBtn2"
                android:layout_below="@id/telBtn1"
                android:layout_marginTop="20dip"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main2btn3"
                android:layout_below="@id/telBtn2"
                android:layout_marginTop="20dip"
                android:id="@+id/telBtn3"
                />





        </RelativeLayout>







    </RelativeLayout>

</android.support.constraint.ConstraintLayout>

