<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wolfgang.firebasepractice.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dip"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint1"
            android:layout_marginBottom="10dip"
            android:id="@+id/edt1"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt1"
            android:hint="@string/hint2"
            android:layout_marginBottom="10dip"
            android:id="@+id/edt2"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt2"
            android:layout_centerInParent="true"
            android:text="@string/btn"
            android:id="@+id/btn1"
            />




    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
